[package]
name = "hitboxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hitbox = { version = "0.1.0", path = "../hitbox/hitbox" }
hitbox-redis = { version = "0.1.0", path = "../hitbox/hitbox-redis" }
hitbox-tower= { version = "0.1.0", path = "../hitbox/hitbox-tower" }
hitbox-backend = { version = "0.1.0", path = "../hitbox/hitbox-backend" }
hitbox-http = { version = "0.1.0", path = "../hitbox/hitbox-http" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-router = "0.5.1"
reqwest = "0.11.17"
openssl = { version = "0.10", features = ["vendored"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde_yaml = "0.9"
stretto = { version = "0.8", features = ["async"] }
