[package]
name = "hitboxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
futures-util = "0.3"
serde_yaml = "0.8"
hitboxd-handler = { path = "../hitboxd-handler" }
hitboxd-configuration = { path = "../hitboxd-configuration" }
